Fixed Canvas top gap

--- a/assets/style.css
+++ b/assets/style.css
@@ -5,11 +5,19 @@
     --content-expander-color: rgb(132, 113, 238);
 }
 
-#mainCanvas {
+html,
+body {
+    margin: 0;
+    padding: 0;
+}
+
+canvas {
     position: fixed;
     width: 100%;
     height: 100%;
     z-index: -1;
+    display: block;
+    top: 0;
 }
 
 body {
